# Magi

./: .firebaserc  README.md  environment.yml  firebase.json  install_dependencies.sh  package-lock.json  pyproject.toml  requirements.txt
data/: math_tex_knowledge.txt  scene_example.json  scene_examples.yaml
data/improvement_reports/: 25_topics_report.json  multitopic_report_20250527_140958.json  multitopic_report_20250527_141619.json  multitopic_report_20250527_142149.json  multitopic_report_20250527_143304.json  multitopic_report_20250527_145437.json  report_20250527_121723.json  report_20250527_122721.json  report_20250527_123738.json
data/prompt_versions/: manim_prompt_v1.txt  manim_prompt_v10.txt  manim_prompt_v100.txt  manim_prompt_v11.txt  manim_prompt_v12.txt  manim_prompt_v13.txt  manim_prompt_v14.txt  manim_prompt_v15.txt  manim_prompt_v16.txt  manim_prompt_v17.txt  manim_prompt_v18.txt  manim_prompt_v19.txt  manim_prompt_v1_20250527_121433.txt  manim_prompt_v1_20250527_122441.txt  manim_prompt_v1_20250527_123437.txt  manim_prompt_v1_20250527_141333.txt  manim_prompt_v1_20250527_141849.txt  manim_prompt_v1_20250527_143105.txt  manim_prompt_v1_20250527_145152.txt  manim_prompt_v2.txt  manim_prompt_v20.txt  manim_prompt_v21.txt  manim_prompt_v22.txt  manim_prompt_v23.txt  manim_prompt_v24.txt  manim_prompt_v25.txt  manim_prompt_v26.txt  manim_prompt_v27.txt  manim_prompt_v28.txt  manim_prompt_v29.txt  manim_prompt_v2_20250527_121552.txt  manim_prompt_v2_20250527_122506.txt  manim_prompt_v2_20250527_123512.txt  manim_prompt_v2_20250527_141415.txt  (+97 more)
(+44 files in other folders)
